--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "lottery-syndicate-backend",
   "version": "1.0.0",
-  "description": "Backend for Lottery Syndicate app",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
